--- a/P5/index.html
+++ b/P5/index.html
@@ -2,14 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Sketch</title>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
+    <script src="Classes/bound.js"></script>
+    <script src="Classes/pongPaddle.js"></script>
+    <script src="Classes/pongSimulation.js"></script>
+    <script src="Classes/ball.js"></script>
   </head>
 
   <body>
