--- a/P5/index.html
+++ b/P5/index.html
@@ -10,10 +10,10 @@
 
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
-    <script src="Classes/bound.js"></script>
-    <script src="Classes/pongPaddle.js"></script>
-    <script src="Classes/pongSimulation.js"></script>
-    <script src="Classes/ball.js"></script>
+    <script src="Classes/PongClasses/ball.js"></script>
+    <script src="Classes/PongClasses/bound.js"></script>
+    <script src="Classes/PongClasses/pongPaddle.js"></script>
+    <script src="Classes/PongClasses/pongSimulation.js"></script>
   </head>
 
   <body>
