--- a/P5/index.html
+++ b/P5/index.html
@@ -14,6 +14,8 @@
     <script src="Classes/PongClasses/bound.js"></script>
     <script src="Classes/PongClasses/pongPaddle.js"></script>
     <script src="Classes/PongClasses/pongSimulation.js"></script>
+    <script src="Classes/NeuralNetworkClasses/NeuralNetwork.js"></script>
+    <script src="Classes/NeuralNetworkClasses/Neuron.js"></script>
   </head>
 
   <body>
